--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>SENTRY INFINITY | Abdullah Al Fahim</title>
+    <title>SENTRY FAHIM | Abdullah Al Fahim</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&family=Plus+Jakarta+Sans:wght@300;500;800&display=swap" rel="stylesheet">
     <style>
@@ -113,7 +113,7 @@
 <div id="map"></div>
 
 <div class="hud-top">
-    <div class="os-logo">SENTRY INFINITY</div>
+    <div class="os-logo">SENTRY FAHIM</div>
     <div style="display:flex; align-items:center; gap:15px;">
         <button class="mode-toggle" onclick="toggleMode()">🌓</button>
         <div id="timer" style="font-family:'Syncopate'; font-size:10px; color:var(--safe);">SYNC: 10S</div>
@@ -338,3 +338,4 @@
 </script>
 </body>
 </html>
+
